screen-scaling/small-phone.css
@media screen and (max-width: 378px) {
  .skill-list-small span {
    font-size: 8px;
  }

  .footer-links a {
    font-size: 25px;
  }

  #codewars-icon-size {
    height: 25px;
  }

  .menu-iphone {
    bottom: 10px;
  }

}

@media screen and (max-width: 360px) {
  .menu-iphone {
    /*display: none;*/
    bottom: 20px;
  }

}

